# cuda_cmake_sample

./: .gitignore  CMakeLists.txt  main.cu
